# demon3.16

./: PROJECT_SUMMARY_FOR_AI_AGENT.md  demon3.16.code-workspace  roadmap.cpp  start_all.sh  代码修改计划.md  任务分配与重分配技术文档.md  任务分配系统技术文档.md  内河船舶任务分配与自适应重分配技术方案.md  基于AIS导航势场的无人艇路径规划-工程实现.md  基于AIS导航势场的无人艇路径规划.md  实施计划.md
config/: system_config.txt  task_config.txt  task_config_test.txt  task_list.txt  usv_config.txt  usv_config_test.txt
data/stations/: gas_stations_at_shore_improved.txt  ports_coordinates.txt  usv_state.txt
devel/: .catkin  local_setup.fish  setup.fish  setup.sh
docs/design/: 任务分配与重分配技术文档.md  任务分配系统技术文档.md  异构图任务分配与图优化求解技术文档.md  异构图重建方案.md  异构路网分配方案.md  状态驱动调度方案.md  系统最终方案.md
install/: local_setup.sh  setup.fish  setup.sh
src/ais_navigation/: CMakeLists.txt  METHOD.md
src/ais_navigation/launch/: ais_planner.launch
src/ais_navigation/map/: dir_y.csv  navigation_potential_field.csv  phibar_grad_x.csv  phibar_grad_y.csv
src/ais_navigation/scripts/: generate_navigation_field.py
src/ais_navigation/src/: ais_path_optimizer_node.cpp  ais_planner_node.cpp
src/task_planner/: CMakeLists.txt  package.xml  roadmap_generator  启动
src/task_planner/config/: dwa_demo.yaml  fleet_demo.rviz  gas_stations.txt  gas_stations.yaml  localmap3_global_demo.rviz  localmap3_portals.yaml  ports.txt  ports.yaml  ships.yaml  tasks.txt  tasks1.txt  tasks80.txt  usvs.txt
src/task_planner/docs/: UNIFIED_ARCHITECTURE.md
src/task_planner/docs/algorithms/: ALGORITHM_COMPARISON.md
src/task_planner/include/task_planner/: common.h  roadmap.h
src/task_planner/launch/: dwa_local_demo.launch  fleet_demo_bridge.launch  local_ship_stack.launch  task_planner.launch  whole_river_with_ais_segment.launch
src/task_planner/output/: ablation_b1_b7_raw.csv  ablation_b1_b7_report.md  ablation_b1_b7_summary.json  algorithm_comparison_latest.txt  allocation_demo.json  current_alns_ablation_tasks80_3seeds.json  demo_logs.json  gnn_marginal_v1_smoke.json  gnn_static_evaluation_smoke.json  gnn_static_evaluation_v1.json  gnn_static_evaluation_v2.json  gnn_static_evaluation_v3.json  gnn_static_evaluation_v3_k4.json  gnn_static_evaluation_v3_k5.json  gnn_static_evaluation_v3_seeded.json  hgt_matcher_marginal_v1.pt  hgt_matcher_smoke.pt  hgt_matcher_v1.pt  hgt_matcher_v2.pt  hgt_matcher_v3.pt  initial_allocation.json  initial_allocation.txt  learning_batch_a.jsonl  learning_batch_b.jsonl  learning_marginal_v1.jsonl  learning_smoke.jsonl  learning_v2_a.jsonl  learning_v2_b.jsonl  learning_v3_a.jsonl  learning_v3_b.jsonl  map_bg.txt  map_bg_full.txt  road_network.json  road_network.previous.json  road_network_cpp.json  rolling_comparison_raw.csv  static_methods_hgt_v3.json  static_methods_hgt_v3_bottleneck.json  static_methods_hgt_v3_k4.json  static_methods_hgt_v3_k4_current.json  (+7 more)
src/task_planner/output/ablation_tasks80/: ablation_b1_b7_raw.csv  ablation_b1_b7_report.md  ablation_b1_b7_summary.json  ablation_progress.json
src/task_planner/scripts/: ALGORITHM_COMPARISON.md  README.md  __init__.py  alns_scheduler.py  compare_all.py  compare_exhaustive.py  compare_greedy.py  compare_large_scale.py  demo_full_lifecycle.py  experiments.py  full_comparison.py  gen_allocation_map.py  gen_roadmap_png.py  gen_task_picker_html.py  ges_scheduler.py  graph_evaluator.py  interactive_task_picker.py  output_all_results.py  paths.py  road_network.py  run_allocation.py  scheduler.py  tabu_scheduler.py  task_assigner.py  test_all_three.py  test_allocation.py  test_final.py  test_hetero_flow.py  test_phase1.py  test_real_time.py  test_v2_system.py  visualize_dashboard.py  visualize_hetero_graph.py  visualize_realtime.py  visualize_road_net.py  visualize_rolling.py  vns_scheduler.py
src/task_planner/scripts/algorithms/: __init__.py  alns_scheduler.py  ges_scheduler.py
src/task_planner/scripts/apps/: __init__.py  dwa_kinematic_sim_node.py  mock_local_follower_node.py  run_allocation.py
src/task_planner/scripts/core/: __init__.py  static_assignment.py
src/task_planner/scripts/experiments/: __init__.py  compare_all.py  compare_exhaustive.py  compare_greedy.py  compare_large_scale.py  demo_full_lifecycle.py  experiments.py  full_comparison.py  output_all_results.py  run_ablation.py  run_current_alns_ablation.py  run_rolling_comparison.py
src/task_planner/scripts/learning/: README.md  __init__.py  evaluate_static_gnn.py  evaluate_static_methods.py  hgt_matcher.py  inference.py  pyg_adapter.py  requirements-learning.txt
src/task_planner/scripts/runtime/: __init__.py  auction_realloc.py
src/task_planner/scripts/tests/: __init__.py  test_all_three.py  test_allocation.py  test_final.py  test_hetero_flow.py  test_phase1.py  test_real_time.py  test_unified_pipeline.py  test_v2_system.py
src/task_planner/scripts/visualization/: __init__.py  gen_allocation_map.py  gen_roadmap_png.py  gen_task_picker_html.py  interactive_task_picker.py  plot_ablation.py  plot_algorithm_comparison.py  plot_current_alns_ablation.py  plot_static_methods.py  visualize_allocation.py  visualize_dashboard.py  visualize_hetero_graph.py  visualize_realtime.py  visualize_road_net.py  visualize_rolling.py  visualize_timeline.py
src/task_planner/src/: common.cpp  roadmap.cpp  roadmap_generator_node.cpp
src/usv_roadmap_standalone/: CMakeLists.txt  package.xml
src/usv_roadmap_standalone/include/usv_roadmap/: common.h  roadmap.h
src/usv_roadmap_standalone/src/: common.cpp
src/waterway_map/: CMakeLists.txt
数据/: map3.m  向右.rar
数据/向右/: 412366250_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  412764790_Sat+Nov+02+00_01_00+CST+2024-Sat+Nov+02+00_01_00+CST+2024.xls  412766540_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  413264640_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  413266610_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  413309280_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  413356720_Sat+Nov+02+00_01_00+CST+2024-Sat+Nov+02+00_01_00+CST+2024.xls  413363710_Sat+Nov+02+00_03_00+CST+2024-Sat+Nov+02+00_03_00+CST+2024.xls  (+38 more)
数据/航道数据收集/: 0-80.rar  向右.rar  (+2 more)
(+150 files in other folders)
