<?xml version="1.0"?>
<package format="2">
  <name>task_planner</name>
  <version>0.0.0</version>
  <description>High-level task planning and allocation for inland waterway vessels</description>

  <maintainer email="fufeng@todo.todo">fufeng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>

  <export>
  </export>
</package>
