<?xml version="1.0"?>
<package format="2">
  <name>usv_roadmap</name>
  <version>0.0.1</version>
  <description>USV roadmap generation module (self-contained)</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
</package>
